<resources>
    <string name="app_name">My Education Student App</string>
    <string name="email_required">Email Required</string>
    <string name="password_required">Password Required</string>
    <string name="short_pasword">Password is too short</string>
    <string name="full_name_required">Full Name is Required</string>
    <string name="home_activity">Home Page</string>
    <string name="add_a_question_here">Add a Question Here !</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="choice_4">Choice 4</string>
    <string name="choose_the_answer_number">Choose The Answer Number</string>
    <string name="add_question">Add Question</string>
    <string name="add_name_of_the_assignment">Add Name of the Assignment!</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_file_from_storage">Select File From Storage</string>
    <string name="choose">Choose</string>
    <string name="save">Save</string>
    <string name="add_a_lecture_name">Add a Lecture Name!</string>
    <string name="add_a_lecture_link">Add a Lecture Link !</string>
    <string name="add_a_lecturer_s_date">Add a Lecturer\'s Date!</string>
    <string name="todo">TODO</string>
    <string name="assignment_name">Assignment Name !</string>
    <string name="download_the_assignment_file_pdf">Download The Assignment File (Pdf)</string>
    <string name="welcome">Welcome</string>
    <string name="lecture_name">Lecture Name</string>
    <string name="lecuter_link">Lecuter Link</string>
    <string name="lectuer_date">Lectuer Date</string>
    <string name="the_previous">Previous</string>
    <string name="the_next">Next</string>
    <string name="exam_date">Exam Date</string>
    <string name="add_exam">Add Exam</string>
    <string name="exam_name">Exam Name</string>
    <string name="delete">Delete</string>
    <string name="finish">Finish</string>
    <string name="exit">Exit</string>
    <string name="enter_question">Please Enter The Question</string>
    <string name="enter_choice_1">Please Enter The Choice 1</string>
    <string name="enter_choice_2">Please Enter The Choice 2</string>
    <string name="enter_choice_3">Please Enter The Choice 3</string>
    <string name="enter_choice_4">Please Enter The Choice 4</string>
    <string name="add_question_successfully">Add Question Successfully</string>
    <string name="enter_exam_name">Please Enter Exam Name</string>
    <string name="enter_exam_degree">Please Enter Exam Degree</string>
    <string name="enter_exam_date">Please Enter Exam Date</string>
    <string name="add_exam_successfully">Add Exam Successfully</string>
    <string name="check_question_box">Please Check All Question Boxes</string>
    <string name="exam_page">Exams Page</string>
    <string name="didnot_choose">\"You did not choose answer to the question : \"</string>
    <string name="are_you_sure">Are you sure to delete?</string>
    <string name="ok">OK</string>
    <string name="cancle">Cancle</string>
    <string name="delete_successfully">Deleted Successfully</string>
    <string name="file_upload">File Upload…</string>
    <string name="add_lecture_successfully">Add Lecture Successfully</string>
    <string name="file_loading">File Is Loading ....</string>
    <string name="enter_lec_name">Please Enter The Lecture Name</string>
    <string name="enter_lec_link">Please Enter The Lecture Link</string>
    <string name="enter_lec_date">Please Enter The Lecture Date</string>
    <string name="homework_page">Assignment Page</string>
    <string name="add_exam_page">Add Exam Page</string>
    <string name="questions_page">Questions Page</string>
    <string name="add_homework_page">Add Assignment page</string>
    <string name="enter_assignment_name">Please Enter Assignment Name</string>
    <string name="enter_assignment_startdate">Please Enter The Assignment Start Date</string>
    <string name="enter_assignment_enddate">Please Enter The Assignment End Date</string>
    <string name="assignments_page">Assignments Page</string>
    <string name="assignment_page">Assignment Page</string>
    <string name="add_homework_success">Add Assignment Successfully</string>
    <string name="enter_homework_name">Please Enter The Assignment Name</string>
    <string name="updata_success">Update Success</string>
    <string name="updata_lec_success">Update Lecture Successfully</string>
    <string name="lec_page">Lectures Page</string>
    <string name="register_successfully">Registration User Successfully</string>
    <string name="register_failed">Registration Failed</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="your_score_in_the_exam">Your Score In The Exam</string>
    <string name="you_have_taken_exam">You Have Taken This Exam</string>
    <string name="you_have_taken_exam_before">You Have Taken This Exam Before</string>
    <string name="you_have_upload_homework">You Have Upload This Home Work</string>
    <string name="you_have_upload_homework_before">You Have Upload This Home Work Before</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_success">Login User Successfully</string>
    <string name="homework_not_valid">This HomeWork Is Not Valid</string>
    <string name="exams">Exams</string>
    <string name="homework">HomeWork</string>
    <string name="lectures">Lectures</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register_now">Register Now</string>
    <string name="new_user">New User?</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="login">Login</string>
</resources>