<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.Auth.RegisterActivity">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_alignParentStart="true"
        android:background="@drawable/ic_wave" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img1"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="@color/prim"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forget"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/border_btn_signup"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="@dimen/_12sdp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullName"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/border_btn_signup"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_12sdp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/border_btn_signup"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_12sdp"
        android:textAlignment="textStart" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pbCircular"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/btnSignup"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pbCircular"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/round_border_btn_signup"
        android:padding="@dimen/_12sdp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:backgroundTint="@null" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignup"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account" />

        <Button
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textColor="@color/prim" />
    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_wave_2" />


</RelativeLayout>