<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_5sdp"
    android:background="@color/prim"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".UI.HomeWork.HomeWorkActivity">

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHomeWork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:padding="10dp"
        app:cardBackgroundColor="#FFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:enabled="false"
                android:hint="@string/assignment_name"
                app:boxStrokeColor="@color/black"
                app:shapeAppearance="@style/Rounded"
                app:startIconDrawable="@drawable/ic_baseline_edit_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/homeworkName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:background="@drawable/gray_border"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/hkStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/start_date"
                    android:textColor="@color/darkgray"
                    android:maxWidth="@dimen/_100sdp"
                    android:text="" />

                <ImageButton
                    android:id="@+id/BtnHKStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/todo"
                    android:enabled="false"
                    android:src="@drawable/ic_baseline_edit_calendar_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:background="@drawable/gray_border"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/hkEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textColor="@color/darkgray"
                    android:hint="@string/end_date"
                    android:maxWidth="@dimen/_100sdp"
                    android:text="" />

                <ImageButton
                    android:id="@+id/BtnHKEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/todo"
                    android:enabled="false"
                    android:src="@drawable/ic_baseline_edit_calendar_24" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:background="@drawable/gray_border"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/homeWorkPdfDownLoad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/darkgray"
                    android:hint="@string/download_the_assignment_file_pdf"
                    android:maxWidth="@dimen/_100sdp" />

                <ImageButton
                    android:id="@+id/downLoadPdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_cloud_download_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_7sdp"
                android:background="@drawable/gray_border"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/hwPdfName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textColor="@color/darkgray"
                    android:hint="@string/select_file_from_storage"
                    android:maxWidth="@dimen/_100sdp" />

                <ImageButton
                    android:id="@+id/selectFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_upload_file_24"
                    android:text="@string/choose" />
            </LinearLayout>

            <Button
                android:id="@+id/saveHomeWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_16sdp"
                android:background="@drawable/bt_uidesign"
                android:backgroundTint="@color/prim"
                android:text="@string/upload"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>