<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">





    <ImageView
        android:id="@+id/img1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_alignParentStart="true"
        android:background="@drawable/ic_wave" />

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">


        <Button
            android:id="@+id/examsActivity"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/bt_uidesign_main"
            android:backgroundTint="@color/prim"
            android:text="@string/exams"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/homework"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/bt_uidesign_main"
            android:backgroundTint="@color/prim"
            android:text="@string/homework"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/lectuers"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/bt_uidesign_main"
            android:backgroundTint="@color/prim"
            android:text="@string/lectures"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_wave_2" />

</RelativeLayout>