<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Lecuter.LectuerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.youtube.player.YouTubePlayerView
                android:id="@+id/youTubePLayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/youTubePLayer"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:enabled="false"
                    android:hint="@string/lecture_name"
                    app:boxStrokeColor="@color/black"
                    app:shapeAppearance="@style/Rounded"
                    app:startIconDrawable="@drawable/ic_baseline_edit_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lectuerNameTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:enabled="false"
                    android:hint="@string/lecuter_link"
                    app:boxStrokeColor="@color/black"
                    app:shapeAppearance="@style/Rounded"
                    app:startIconDrawable="@drawable/ic_baseline_add_link_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lectuerLinkTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="textUri" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:enabled="false"
                    android:hint="@string/lectuer_date"
                    app:boxStrokeColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lectuerNameTV"
                    app:shapeAppearance="@style/Rounded"
                    app:startIconDrawable="@drawable/ic_baseline_edit_calendar_24"
                    tools:ignore="NotSibling">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lectuerDateTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:id="@+id/layoutDownLoad"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_7sdp"
                    android:background="@drawable/gray_border"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/lecPdfNameDownLoad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:hint="@string/download_the_assignment_file_pdf"
                        android:maxWidth="@dimen/_100sdp" />

                    <ImageButton
                        android:id="@+id/downLoadPdf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:src="@drawable/ic_baseline_cloud_download_24" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FABPlayVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_play_arrow_24"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".1"
        tools:ignore="MissingConstraints,NotSibling" />

</androidx.constraintlayout.widget.ConstraintLayout>